# dotfiles

./: .bash_aliases  .bashrc  .git-credentials  .gitconfig  .gitignore  .gitmodules  .p10k.zsh  .tmux.conf  .wezterm.lua  .zsh_aliases  .zshrc  README.md  colour_switcher.sh
.config/: starship.toml
.config/Code/: Network Persistent State  Preferences  TransportSecurity  machineid
.config/alacritty/: alacritty.toml
.config/awesome/: fancy_taglist.lua  rc.lua
.config/btop/: btop.conf
.config/delta/: catppuccin.gitconfig
.config/dunst/: dunstrc
.config/fish/: config.fish  fish_plugins  fish_variables
.config/ghostty/: config
.config/gtk-2.0/: gtkfilechooser.ini  settings.ini
.config/gtk-3.0/: bookmarks  settings.ini
.config/gtk-4.0/: settings.ini
.config/hypr/: home.conf  hyprland.conf
.config/i3/: config
.config/kitty/: kitty.conf
.config/nvim/: configs.norg  init.lua  lazy-lock.json  rocks.toml
.config/picom/: picom.conf
.config/polybar/: config.ini  cyberdream.ini  frappe.ini  launch_polybar.sh  modus_vivendi.ini
.config/rofi/: config.rasi
.config/terminator/: config
.doom.d/: config.el  init.el  packages.el
.screenlayout/: home.sh  home_office.sh  home_office2.sh  office.sh  willian.sh
.vim.d/: init.lua
aerospace/: .aerospace.toml
bash/: .bash_aliases  .bashrc
git/: .gitconfig  .gitconfig-office
pi/.pi/agent/extensions/web-search/: index.ts  pyproject.toml
pi/.pi/agent/extensions/web-search/scripts/: fetch.py  search.py
tmux/: .gitignore  .tmux.conf
wezterm/: .wezterm.lua
zsh/: .p10k.zsh  .zsh_aliases  .zshrc
(+1652 files in other folders)
